# robotics-notes

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
control/: pid_cartpole.py
coursera_intro_emb_sys/assessments/m1/: stats.c  stats.h
docker/helsinki-course/ruby-rails/: Dockerfile
docker/helsinki-course/running-webserv/: docker-compose.yml
docker/ros2/: Dockerfile  Dockerfile.ros2bridge  Dockerfile.ros2core  docker-compose.yml  setup.sh  setup_core.sh
dump/project_2/: CMakeLists.txt  package.xml
dump/project_2/src/: forward.py
dump/wheeled_robot_kinematics_old/: CMakeLists.txt  package.xml
embedded_programming/interrupt/project/: .cproject  delay.c  main.c  tm4c123gh6pm_startup_ccs.c
embedded_programming/lesson1/project/: .ccsproject  .cproject  main.c
embedded_programming/lesson13/project/: .cproject  delay.c  main.c
embedded_programming/lesson16/project/: .cproject  main.c
embedded_programming/lesson2/project/: main.c
embedded_programming/lesson3/project/: main.c
embedded_programming/lesson5/: .gitignore
embedded_programming/lesson5/project/: .cproject  main.c
embedded_programming/lesson6/project/: main.c
jmu_cs_354/: kinematics_hw.py  ps01-example.txt  ps01-f16.py  transforms.py
jmu_cs_354/lab1/: controller.py  locomotive_sim.py
jmu_cs_354/lab2/: forward.py  wander.py
jmu_cs_354/lab_numpy/: detector.py
mit_6096_course/lab1/: helloworld.cpp  helloworld2.cpp  s31q1.cpp  s31q2.cpp  s31q3.cpp  s31q4.cpp  s31q5.cpp  s32.cpp  s34.cpp  s4.cpp  test
mit_6096_course/lab2/: rng.cpp
mit_6096_course/lab3/: geometry.cpp  geometry.h  test
neuromorphic/csci252/: dotprod.py  hopfield.py  sdm.py  som.py
pcb_design/light/: custom-button.lbr  light.brd  light.cmp  light.crm  light.l1  light.l2  light.ncd  light.plc  light.pls  light.pnp.front.csv  light.sch  light.sol  light.stc  light.sts
pcb_design/low-pass-filter/: .GBO  .GBS  .GTL  .GTO  .GTP  .GTS  .TXT  eagle.epf  low-pass-filter.GBL  low-pass-filter.GBO  low-pass-filter.GBS  low-pass-filter.GKO  low-pass-filter.GTL  low-pass-filter.GTO  low-pass-filter.GTP  low-pass-filter.GTS  low-pass-filter.XLN  low-pass-filter.brd  low-pass-filter.sch
ros2/.devcontainer/: Dockerfile  devcontainer.json
stanford_ee107_course/cse190_p1/: cse190_p1.ino  ledcircle.ino  timer.h  timer.ino
stanford_ee107_course/cse190_p2/: bma250.h  bma250.ino  cse190_p2.ino  i2c.h  i2c.ino
(+92 files in other folders)
