[tool.poetry]
name = "robotics-notes"
version = "0.1.0"
description = ""
authors = ["calvin d. woo <calvin.d.woo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
mypy = "^0.971"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
